<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/layout_background"
    android:orientation="vertical">


    <TextView
        android:id="@+id/closeusruppwd"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/circlebackground"
        android:clickable="true"
        android:gravity="center"
        android:text="X"
        android:textColor="@color/backgroundcolor"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_margin="15dp"
            android:layout_marginTop="5dp"
            android:text="Update Password"
            android:textColor="@color/backgroundcolor"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/oldpwdup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/oldpwdhnt"
            android:inputType="textPassword"
            android:text="@null"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/newpwdup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/newpwdhnt"
            android:inputType="textPassword"
            android:text="@null"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/repwdup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/renwpwdhnt"
            android:inputType="textPassword"
            android:text="@null"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnupdatepudrv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/buttonstyle2"
            android:text="Update Password"
            android:textColor="@color/backgroundcolor" />

        <Button
            android:id="@+id/btncloseusruppwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/buttonstyle2"
            android:onClick="btnSignup"
            android:text="Cancel"
            android:textColor="@color/backgroundcolor" />
    </LinearLayout>


</LinearLayout>