<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/backgroundcolor"
    android:orientation="vertical"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundcolor"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backgroundcolor"
            android:orientation="vertical">


            <android.support.v7.widget.CardView
                android:id="@+id/listitemcardnotification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/backgroundcolor"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginLeft="8dp">

                        <android.support.constraint.ConstraintLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/backgroundcolor">

                            <ImageView
                                android:id="@+id/statnotifi"
                                android:layout_width="10dp"
                                android:layout_height="10dp"
                                android:layout_marginTop="68dp"
                                android:background="@drawable/cerclebackgroundyellow"
                                android:padding="10dp"
                                android:src="@drawable/ic_proile"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                        </android.support.constraint.ConstraintLayout>
                    </android.support.constraint.ConstraintLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@color/backgroundcolor"
                        android:gravity="center"
                        android:orientation="vertical">

                        <android.support.v7.widget.CardView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_margin="5dp"
                            android:clickable="true"
                            android:elevation="10dp"

                            android:foreground="?android:attr/selectableItemBackground"
                            app:cardCornerRadius="50dp">

                            <ImageView
                                android:id="@+id/dpnofiimg"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/backgroundcolor"
                                android:scaleType="centerCrop"
                                android:src="@drawable/ic_perm_username" />

                        </android.support.v7.widget.CardView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="160dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:background="@color/backgroundcolor"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/namenoti"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/txtname"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <android.support.constraint.ConstraintLayout
                        android:id="@+id/consbtnnoti"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/backgroundcolor"
                        android:orientation="vertical"
                        android:gravity="center">

                        <Button
                            android:id="@+id/reqServiceidnoti"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="20dp"
                            android:background="@drawable/buttonstyle1"
                            android:text="@string/btnreqaccept"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <Button
                            android:id="@+id/deletenoti"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_margin="10dp"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/buttonstyle3"
                            android:text="@string/btnreqdelete"
                            app:layout_constraintEnd_toEndOf="@+id/reqServiceidnoti"
                            app:layout_constraintStart_toStartOf="@+id/reqServiceidnoti"
                            app:layout_constraintTop_toBottomOf="@+id/reqServiceidnoti" />


                    </android.support.constraint.ConstraintLayout>


                </LinearLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>

    </LinearLayout>
</LinearLayout>